[package]
name = "anistream_server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"
scraper = "0.13.0"
reqwest = {version = "0.11.11", features = ["blocking"]}
rocket_codegen = "0.5.0-rc.2"